maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: not found: value murnord
    if(!murnord())
        ^